fix progress bar overlap

--- a/react-portfolio-app/src/App.css
+++ b/react-portfolio-app/src/App.css
@@ -68,7 +68,7 @@ img {
 }
 
 .name-header {
-  color: rgba(116, 162, 41, 0.74);
+  color:  rgba(51, 235, 122, 0.564);
   font-size: 5em;
   font-weight: 500;
   text-align: center;
@@ -80,7 +80,7 @@ img {
 }
 
 .name-header-projects {
-  color: rgba(116, 162, 41, 0.74);
+  color: rgba(230, 230, 230, 0.897);
   font-size: 5em;
   font-weight: 500;
   text-align: center;
@@ -94,7 +94,7 @@ img {
 
 /* -------------- about */
 .name-header-about {
-  color: rgba(116, 162, 41, 0.74);
+  color: rgba(230, 230, 230, 0.897);
   font-size: 5em;
   font-weight: 500;
   text-align: center;
@@ -128,22 +128,24 @@ img:hover{
   text-align: left;
 }
 
+/* -------------- progress bar */
 .progress-bar {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   height: 10px;
-  background: var(--orange);
+  background: var(--green);
   transform-origin: 0%;
+  z-index: 10;
 }
 
 body {
 
-  --orange: #ff9900;
+  --green:  rgba(51, 235, 122, 0.564);
 
-  --background: var(--white);
-  --accent: var(--black);
+  /* --background: var(--white);
+  --accent: var(--black); */
 
   margin: 0;
   padding: 0;
